--- a/model/public/css/registration.css
+++ b/model/public/css/registration.css
@@ -3,6 +3,8 @@
     text-align: center;
     margin-top: 100px;
     margin-bottom: 100px;
+    position: relative;
+    
 }
 
 /* ========== FORM ========== */
@@ -138,6 +140,38 @@ button{
 small{
     font-size: 11px;
 }
+
+/* ========== THANK YOU ========== */
+.thank_you{
+    
+    position: fixed;
+    top: 0;
+    left: 0;   
+    z-index: 100;    
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 300ms ease-in-out;
+
+}
+
+.thank_you_box{    
+    background-color: #27B973;
+    height: 200px;
+    width: 500px;
+    padding: 35px;
+}
+
+.thank_you_box h1, .thank_you_box h4{
+    text-align: center;
+    margin: 5px;
+
+}
+
+
 
 /* ========== MEDIA QUERIES REGISTRATION========== */
 
