--- a/model/public/css/registration.css
+++ b/model/public/css/registration.css
@@ -3,8 +3,8 @@
     text-align: center;
     margin-top: 100px;
     margin-bottom: 100px;
-    position: relative;
-    
+    /* position: relative; */
+
 }
 
 /* ========== FORM ========== */
@@ -148,13 +148,13 @@ small{
     top: 0;
     left: 0;   
     z-index: 100;    
-    background-color: white;
+    background-color: black;
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 300ms ease-in-out;
+    /* transition: all 300ms ease-in-out; */
 
 }
 
