--- a/model/public/css/registration_admin.css
+++ b/model/public/css/registration_admin.css
@@ -20,7 +20,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0px 0px 20px 0 ;
+   
+}
+
+.registration_admin_title img{
+   width: 200px;
+   
 }
 
  form{
