--- a/model/public/css/registration.css
+++ b/model/public/css/registration.css
@@ -142,7 +142,7 @@ small{
 }
 
 /* ========== THANK YOU ========== */
-.thank_you{
+/* .thank_you{
     
     position: fixed;
     top: 0;
@@ -154,11 +154,11 @@ small{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* transition: all 300ms ease-in-out; */
+    
 
-}
+} */
 
-.thank_you_box{    
+/* .thank_you_box{    
     background-color: #27B973;
     height: 200px;
     width: 500px;
@@ -169,7 +169,7 @@ small{
     text-align: center;
     margin: 5px;
 
-}
+} */
 
 
 
