--- a/model/public/css/registration_admin.css
+++ b/model/public/css/registration_admin.css
@@ -1,7 +1,6 @@
 .registration_admin{
     width: 100vw;
     height: 100vh;
-   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,7 +27,7 @@
    
 }
 
- form{
+.form_admin{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,9 +35,9 @@
     margin: 20px 0;
 }
 
-form input{
+.form_admin input{
     width: 300px;
-    /* height: 30px; */
+   
     outline: none;
     border: rgba(128, 128, 128, 0.589);
     margin: 10px 0;
@@ -49,7 +48,7 @@ form input{
     padding: 9px;
 }
 
-form button{
+.form_admin button{
     width: 310px;
     padding: 10px 0;
     background-color:#34D186;
@@ -59,7 +58,7 @@ form button{
     margin: 10px;
     cursor: pointer;
 }
-form button:hover{
+.form_admin button:hover{
     -webkit-box-shadow: 5px 5px 15px 5px #0000006e; 
     box-shadow: 5px 5px 15px 5px #00000056;
 }
