--- a/model/public/css/login_admin.css
+++ b/model/public/css/login_admin.css
@@ -1,16 +1,10 @@
-.registration_admin{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.registration_admin_all{
-    width: 900px;
-   
+.registration_login{
+    width: 100%;
+    height: 100%;
+    
 }
 
-.registration_admin_title{
+.registration_login_title{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,12 +12,12 @@
    
 }
 
-.registration_admin_title img{
+.registration_login_title img{
    width: 200px;
    
 }
 
-.form_admin{
+.form_login{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,7 +25,7 @@
     margin: 20px 0;
 }
 
-.form_admin input{
+.form_login input{
     width: 300px;
     outline: none;
     border: rgba(128, 128, 128, 0.589);
@@ -43,7 +37,7 @@
     padding: 9px;
 }
 
-.form_admin button{
+.form_login button{
     width: 310px;
     padding: 10px 0;
     background-color:#34D186;
@@ -53,12 +47,12 @@
     margin: 10px;
     cursor: pointer;
 }
-.form_admin button:hover{
+.form_login button:hover{
     -webkit-box-shadow: 5px 5px 15px 5px #0000006e; 
     box-shadow: 5px 5px 15px 5px #00000056;
 }
 
-.registration_admin_btn{
+.registration_login_btn{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,12 +60,12 @@
     
 }
 
-.registration_admin_btn small{
+.registration_login_btn small{
     margin: 10px;
 }
 
 
-.registration_admin_btn  a .first_btn {
+.registration_login_btn  a .first_btn {
     width: 310px;
     padding: 10px 0;
     background-color: #4267B2;
@@ -83,7 +77,7 @@
     /* color: ; */
 }
 
-.registration_admin_btn a .last_btn{
+.registration_login_btn a .last_btn{
     width: 310px;
     padding: 10px 0;
     background-color: #E83A33;
@@ -96,15 +90,14 @@
     
 }
 
-.registration_admin_btn  a .first_btn:hover {
+.registration_login_btn  a .first_btn:hover {
     -webkit-box-shadow: 5px 5px 15px 5px #0000006e; 
     box-shadow: 5px 5px 15px 5px #00000056;
 }
 
-.registration_admin_btn a .last_btn:hover{
+.registration_login_btn a .last_btn:hover{
     -webkit-box-shadow: 5px 5px 15px 5px #0000006e; 
     box-shadow: 5px 5px 15px 5px #00000056;
 
     
 }
-
