--- a/model/public/css/drivers.css
+++ b/model/public/css/drivers.css
@@ -8,7 +8,7 @@
 }
 
 .drivers{
-    width: 700px;
+    width: 900px;
     text-align: center;
     -webkit-box-shadow: 5px 5px 15px 5px #0000006e; 
     box-shadow: 5px 5px 15px 5px #00000056;
@@ -40,10 +40,13 @@
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
-    
-    
+    margin: 0 5px;
 }
-
+.drivers tr td .upd a{
+   color: black;
+   text-decoration: none;
+   
+}
 .drivers tr td .del{
     background-color:  red;
     border: none;
@@ -51,76 +54,11 @@
     border-radius: 5px;
     cursor: pointer;
     color: white;
-    
+    margin: 0 5px;
 }
 
-/* ========= EXTRA USER INFORMATIONS ========== */
-.extra_info{
-    width: 100%;
-    height: 100%;
-    padding: 50px 0;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    
-}
-.extra_info_all{
-    /* background-color: red; */
-    width: 900px;
-    position: relative;
-     padding: 50px 0;
-}
-/* .extra_info_all_form{
-    width: 900px;
-   
-} */
-
-.the_inputs{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.inputs_left{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 250px;
-    margin: 10px;
-   
-}
-
-.inputs_left input, .the_select{
-    border: none;
-    padding: 9px 5px;
-    background-color: rgba(128, 128, 128, 0.13);
-    margin: 3px 0;
-    -webkit-box-shadow: 3px 2px 15px -1px #00000011; 
-    box-shadow: 7px 2px 15px -1px #00000009;
-    
-}
-
-.inputs_left button{
-    background-color:#27B973 ;
-    border: none;
-    padding: 12px 12px;
-    margin: 40px 0;
-    cursor: pointer;
+.drivers tr td .del a{
     color: white;
-    font-size: 15px;
+    text-decoration: none;
 }
 
-.inputs_left button:hover{
-    background-color:red ;
-    -webkit-box-shadow: 7px 2px 15px -1px #00000085; 
-    box-shadow: 7px 2px 15px -1px #0000004f;
-}
-
-.extra-info-icon{
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-.material-symbols-sharp{
-    cursor: pointer;
-}
